test/classes/initializers/generics/phase1/setParentField.good
setParentField.chpl:9: In initializer:
setParentField.chpl:10: error: can't set value of field "f1" from parent type during phase 1 of initialization
